--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctypehtml>
 <html>
     <head>
+            <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
+        
     <title>
         Panic At The Disco
     </title>
