--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
             <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
-        
     <title>
         Panic At The Disco
     </title>
     </head>
     <body>
-
+        <h1>
+            Panic! At The Disco
+        </h1>
     </body>
 </html>
