Adding header and content

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!doctypehtml>
+<!doctype html>
 <html>
     <head>
+            <link rel="stylesheet" href="./base.css" />       
             <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
     <title>
         Panic At The Disco
     </title>
     </head>
     <body>
-        <h1>
-            Panic! At The Disco
-        </h1>
+        <header>Panic! At the Disco</header>
+        <div class="content"> Brendon Urie</div>
     </body>
 </html>
