--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
             <link rel="stylesheet" href="./base.css" />       
             <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
     <title>
-        Panic At The Disco
+        About
     </title>
     </head>
     <body>
