--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <header>
+                <div class="header-design">
             <ul class="main-menu">
 
                     <li>
@@ -17,10 +18,15 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
+                    <li>
+                            <a href="tours.html">Tours</a>
+                    </li>
 
             </ul>
+            </div>
         </header>
-        <div class="content"> Brendon Urie</div>
+        <div class="content">
+        </div>
 
     </body>
 </html>
