Adding details on about section

--- a/about.html
+++ b/about.html
@@ -1,32 +1,47 @@
 <!doctype html>
 <html>
-    <head>
-            <link rel="stylesheet" href="./base.css" />       
-            <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
+
+<head>
+    <link rel="stylesheet" href="./base.css" />
+    <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
     <title>
         About
     </title>
-    </head>
-    <body>
-        <header>
-                <div class="header-design">
+</head>
+
+<body>
+    <header>
+        <div class="header-design">
             <ul class="main-menu">
 
-                    <li>
-                        <a href="./index.html">Panic! At The Disco</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                            <a href="tours.html">Tours</a>
-                    </li>
+                <li>
+                    <a href="./index.html">Panic! At The Disco</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="tours.html">Pray for the wicked Tour</a>
+                </li>
 
             </ul>
-            </div>
-        </header>
-        <div class="content">
         </div>
+    </header>
+    <div class="content">
+        <div class="content-design">
+                <div class="image-holder clearfix">
+                        <img src="./img/image4.jpg" alt="Panic! At The Disco" title="Panic! At The Disco" />
+                    </div>
+            <h1>
+                We are Panic! At The Disco!
+            </h1>
+        
+            <p>
+                    Panic! at the Disco is an American rock band from Las Vegas, Nevada, formed in 2004 by childhood friends Brendon Urie, Ryan Ross, Spencer Smith and Brent Wilson. Since 2015, vocalist Urie is the only official member in the band, supported on tours by guitarist Kenneth Harris, drummer Dan Pawlovich, and bassist Nicole Row. Panic! at the Disco recorded its first demos while its members were in high school. Shortly after, the band recorded and released its debut studio album, A Fever You Can't Sweat Out (2005). Popularized by the second single, "I Write Sins Not Tragedies," the album was certified double platinum in the US. In 2006, founding bassist Brent Wilson was fired from the band during an extensive world tour and subsequently replaced by Jon Walker.
+            </p>
+        </div>
+    </div>
 
-    </body>
+</body>
+
 </html>
