--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
 <body>
     <header>
         <div class="header-design">
-        <ul class="main-menu">
+            <ul class="main-menu">
 
-            <li>
-                <a href="./index.html">Panic! At The Disco</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <a href="tours.html">Tours</a>
-            </li>
-        </ul>
+                <li>
+                    <a href="./index.html">Panic! At The Disco</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="tours.html">Pray for the wicked Tour</a>
+                </li>
+            </ul>
         </div>
     </header>
     <div class="content">
-        <div class="image-holder clearfix">
-        <img src="./img/image2.jpg" alt="Brendon Urie" title="Brendon Urie" />
+        <div class="content-design">
+            <div class="image-holder clearfix">
+                <img src="./img/image2.jpg" alt="Brendon Urie" title="Brendon Urie" />
+            </div>
         </div>
     </div>
 
