--- a/tours.html
+++ b/tours.html
@@ -13,23 +13,25 @@
 
 <body>
     <header>
-            <div class="header-design">
-        <ul class="main-menu">
+        <div class="header-design">
+            <ul class="main-menu">
 
-            <li>
-                <a href="./index.html">Panic! At The Disco</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <a href="tours.html">Tours</a>
-            </li>
-        </ul>
+                <li>
+                    <a href="./index.html">Panic! At The Disco</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="tours.html">Pray for the wicked Tour</a>
+                </li>
+            </ul>
         </div>
     </header>
     <div class="content">
-        <div class="image-holder clearfix">
+        <div class="content-design">
+            <div class="image-holder clearfix">
+            </div>
         </div>
     </div>
 
