--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <div class="content">
         <div class="content-design">
             <div class="image-holder clearfix">
-                <img src="./img/image4.jpg" alt="Panic! At The Disco" title="Panic! At The Disco" />
+                <img src="./img/image5.png" alt="Panic! At The Disco" title="Panic! At The Disco" />
             </div>
             <h1>
                 Panic! At The Disco
