--- a/tours.html
+++ b/tours.html
@@ -30,8 +30,9 @@
     </header>
     <div class="content">
         <div class="content-design">
-            <div class="image-holder clearfix">
-            </div>
+                <div class="image-holder clearfix">
+                        <img src="./img/prayforthewicked.jpg" alt="Pray for the wicked" title="Pray for the wicked" />
+                    </div>
         </div>
     </div>
 
