--- a/about.html
+++ b/about.html
@@ -52,6 +52,9 @@
                 to make further changes to the band's style. The duo subsequently formed a new band, The Young Veins, leaving
                 Urie and Smith as the sole remaining members of Panic! at the Disco.
             </p>
+            <div class="image-holder clearfix">
+                    <img src="./img/image7.jpg" alt="Panic! At The Disco" title="Panic! At The Disco" />
+                </div>
             <p>
                 Continuing as a duo, Urie and Smith released a new single, "New Perspective," and recruited bassist Dallon Weekes and guitarist
                 Ian Crawford as touring musicians for live performances. Weekes was later inducted into the band's lineup
@@ -64,6 +67,9 @@
                 issues, leaving Urie and Weekes as the remaining members. The duo recruited guitarist Kenneth Harris and
                 drummer Dan Pawlovich as touring musicians for live performances.
             </p>
+            <div class="image-holder clearfix">
+                    <img src="./img/image6.jpg" alt="Panic! At The Disco" title="Panic! At The Disco" />
+                </div>
             <p>
                 In 2015, Smith officially left the band after not performing live with the band since his departure in 2013. Shortly thereafter,
                 Weekes reverted to being a touring member once again, leaving Urie as the only member of the official lineup.
