--- a/tours.html
+++ b/tours.html
@@ -33,6 +33,10 @@
                 <div class="image-holder clearfix">
                         <img src="./img/prayforthewicked.jpg" alt="Pray for the wicked" title="Pray for the wicked" />
                     </div>
+                    <p div class="tour">
+                        October 20  MOA Arena, Philippines
+                    </p>
+                
         </div>
     </div>
 
