--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                 Panic! At The Disco
             </h1>
 
-            <p>
+            <p div class="about-panic">
                 Panic! at the Disco is an American rock band from Las Vegas, Nevada, formed in 2004 by childhood friends Brendon Urie, Ryan
                 Ross, Spencer Smith and Brent Wilson. Since 2015, vocalist Urie is the only official member in the band,
                 supported on tours by guitarist Kenneth Harris, drummer Dan Pawlovich, and bassist Nicole Row. Panic! at
@@ -45,7 +45,7 @@
                 "I Write Sins Not Tragedies," the album was certified double platinum in the US. In 2006, founding bassist
                 Brent Wilson was fired from the band during an extensive world tour and subsequently replaced by Jon Walker.
             </p>
-            <p>
+            <p div class="about-panic">
                 Influenced by 1960s rock bands the Beatles, the Zombies and the Beach Boys, and preceded by the single "Nine in the Afternoon,"
                 the band's second studio album, Pretty. Odd. (2008) marked a significant departure from the sound of the
                 band's debut. Ross and Walker, who favored the band's new direction, departed because Urie and Smith wanted
@@ -55,13 +55,13 @@
             <div class="image-holder clearfix">
                     <img src="./img/image7.jpg" alt="Panic! At The Disco" title="Panic! At The Disco" />
                 </div>
-            <p>
+                <p div class="about-panic">
                 Continuing as a duo, Urie and Smith released a new single, "New Perspective," and recruited bassist Dallon Weekes and guitarist
                 Ian Crawford as touring musicians for live performances. Weekes was later inducted into the band's lineup
                 as a full-time member in 2010. The band's third studio album, Vices & Virtues (2011), was recorded solely
                 by Urie and Smith in 2010, produced by John Feldmann and Butch Walker.
             </p>
-            <p>
+            <p div class="about-panic">
                 As a three-piece, Urie, Smith, and Weekes recorded and released the band's fourth studio album, Too Weird to Live, Too Rare
                 to Die!, in 2013. Prior to the release of the album, Smith unofficially left the band due to health and drug-related
                 issues, leaving Urie and Weekes as the remaining members. The duo recruited guitarist Kenneth Harris and
@@ -70,7 +70,7 @@
             <div class="image-holder clearfix">
                     <img src="./img/image6.jpg" alt="Panic! At The Disco" title="Panic! At The Disco" />
                 </div>
-            <p>
+                <p div class="about-panic">
                 In 2015, Smith officially left the band after not performing live with the band since his departure in 2013. Shortly thereafter,
                 Weekes reverted to being a touring member once again, leaving Urie as the only member of the official lineup.
                 In April 2015, "Hallelujah" was released as the first single from Panic! at the Disco's fifth studio album,
