--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="shortcut icon" type="image/png" href="./img/image1.png" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
 
     <title>
         Panic At The Disco
@@ -41,24 +42,24 @@
                 </div>
                 <div>
                     <ul class="social-link">
-<li>
-    <i class="fab fa-facebook"></i>
-</li>
-<li>
-    <i class="fab fa-instagram"></i>
-</li>
-<li>
-    <i class="fab fa-twitter"></i>
-</li>
-<li>
-    <i class="fab fa-spotify"></i>
-</li>
-<li>
-    <i class="fab fa-apple"></i>
-</li>
-<li>
-    <i class="fab fa-youtube"></i>
-</li>
+                        <li>
+                            <i class="fab fa-facebook"></i>
+                        </li>
+                        <li>
+                            <i class="fab fa-instagram"></i>
+                        </li>
+                        <li>
+                            <i class="fab fa-twitter"></i>
+                        </li>
+                        <li>
+                            <i class="fab fa-spotify"></i>
+                        </li>
+                        <li>
+                            <i class="fab fa-apple"></i>
+                        </li>
+                        <li>
+                            <i class="fab fa-youtube"></i>
+                        </li>
                     </ul>
                 </div>
             </div>
