tour dates and place

--- a/tours.html
+++ b/tours.html
@@ -32,11 +32,33 @@
         <div class="content-design">
                 <div class="image-holder clearfix">
                         <img src="./img/prayforthewicked.jpg" alt="Pray for the wicked" title="Pray for the wicked" />
+                    <ul class="tour-list">
+                        <li>
+                            <div class="tour-date"> OCT 6 Sydney, Australia</div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 9  Adelaide, Australia</div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 11  Brisbane, Australia </div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 13 Melbourne, Australia</div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 16 Aukland, New Zealand </div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 20 Manila, Philippines </div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 22  Tokyo,Japan </div>
+                        </li>
+                        <li>
+                            <div class="tour-date"> OCT 25 Osaka, Japan </div>
+                        </li>
+                    </ul>
                     </div>
-                    <p div class="tour">
-                        October 20  MOA Arena, Philippines
-                    </p>
-                
         </div>
     </div>
 
