Adding high hopes foundation html

--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
                 <li>
                     <a href="tours.html">Pray for the wicked Tour</a>
                 </li>
+                <li>
+                    <a href="highhopesfoundation.html"> High Hopes Foundation</a>
+                </li>
             </ul>
         </div>
     </header>
     <div class="content">
         <div class="content-design">
             <div class="image-holder clearfix">
-                <img src="./img/image2.jpg" alt="Brendon Urie" title="Brendon Urie" />
+                <img src="./img/image6.png" alt="Brendon Urie" title="Brendon Urie" />
             </div>
             <div class="column">
                 <div>
-                    visit us
+                    visit us on
                 </div>
                 <div>
                     <ul class="social-link">
