--- a/tours.html
+++ b/tours.html
@@ -25,6 +25,9 @@
                 <li>
                     <a href="tours.html">Pray for the wicked Tour</a>
                 </li>
+                <li>
+                    <a href="highhopesfoundation.html"> High Hopes Foundation</a>
+                </li>
             </ul>
         </div>
     </header>
