--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@
                 <li>
                     <a href="tours.html">Pray for the wicked Tour</a>
                 </li>
-
+                <li>
+                    <a href="highhopesfoundation.html"> High Hopes Foundation</a>
+                </li>
             </ul>
         </div>
     </header>
